# qgg2026

./: BEHAVIOR_ANALYSIS_REPORT.md  RUNBOOK.md  STATIC_ANALYSIS_REPORT.md  TARGET_SYSTEM_API_AND_GAPS.md  Util.js  adh_cookie.txt  adh_cookie_bad.txt  adh_strings_ascii.txt  agent_get_all.json  agent_mng.js  bad_init.html  bad_login_resp.txt  bad_main.html  client_get_all.json  client_get_all_records.json  client_get_debug_rule.json  client_get_param.json  client_group_ip_get_all.json  client_group_ip_mng.js  client_group_policy_get_all.json  client_group_policy_mng.js  client_mng.js  copy_rule_resp.txt  decoded_modules.json  decoded_rules.json  main.html.js  module_mng.js  my_rule_decoded.json  my_rules_after_copy_records.json  rule_get_all_rule.json  rule_get_all_rule_after_copy.json  rule_mng.js  rule_mng_page.html  rule_shared_get_all_rule.json  target_ajax_calls.json  target_endpoints_grouped.json  target_strOp_values.json  完整汇总.md.txt  开机启动长跟踪报告.md  行为分析报告.md  (+1 more)
_adhunter_probe/: login_resp.txt  main.html  mod__agent_mng.html  mod__agent_policy_mng.html  mod__agent_policy_mng__blackwhite.html  mod__agent_policy_mng__lmp.html  mod__agent_salary_mng.html  mod__client_area_statt.html  (+20 more)
qgg20260423/client-cpp/: CMakeLists.txt  config.example.json
qgg20260423/client-cpp/include/: config_agent.h  module_manager.h  qgg_json.h  qgg_log.h  qgg_util.h  rule_engine.h  rule_executor.h  rules_package.h  runtime_core.h  security_verifier.h
qgg20260423/client-cpp/src/: config_agent.cpp  main.cpp  module_manager.cpp  rule_engine.cpp  runtime_core.cpp  security_verifier.cpp
(+72 files in other folders)
